# hernandezorganizador

./: .gitignore  DEPLOY.md  MEJORAS PARA APLICACIÓN CUADERNOS.docx  package-lock.json  package.json  render.yaml  start.sh  start_app.sh  start_editor.sh  unificar_pedidos.py  vercel.json
excel_sort_bot/: .gitignore  PERSISTENCE_UPGRADE_GUIDE.md  Procfile  README.md  RTE_ENTERPRISE_README.md  clientes_ficticios.json  data_factory.py  generar_clientes_ficticios.py  generar_clientes_reales.py  generate_odf.py  generate_pdf.py  organizar_empeno_doc.py  output_ordenado.errors.json  package.json  pyproject.toml  requirements.txt  rte_server.py  run.py  run_all_tests.py  stress_test_multi_cliente.py  stress_test_v23.py  test_casos_reales.py  test_destructive_guards.py  test_enterprise.py  test_enterprise_blindajes.py  test_enterprise_final.py  test_enterprise_v2.py  test_fuzzy_resolver.py  test_idempotency.py  test_inf_trat_oficial.py  test_internal.py  test_resolver_cuaderno.py  test_rte.py  test_rte_v2.py  test_stress_60_ops.py  validate_cuaderno_oficial.py
excel_sort_bot/api/: server.py
excel_sort_bot/config/: mapping.json
excel_sort_bot/cuaderno/: __init__.py  api.py  excel_generator.py  file_processor.py  models.py  pdf_generator.py  productos_catalogo.py  storage.py  template_export.py
excel_sort_bot/cuaderno-ui/: clean_start.sh  electron.js  next.config.ts  package-lock.json  package.json  start-electron.sh
excel_sort_bot/docs/: CUADERNOS_SUPABASE_SETUP.md  migration_add_counts.sql  schema_carpetas.sql  schema_cuadernos_anio_agricultor.sql  (+1 more)
src/: App.jsx  (+1 more)
(+50 files in other folders)
