[project]
name = "excel-sort-bot"
version = "1.0.0"
description = "Bot profesional para ordenar Excels base desordenados usando una plantilla RESUELTO"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Hernandez Bueno Sort Bot", email = "bot@example.com"}
]

dependencies = [
    "openpyxl>=3.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
excel-sort-bot = "run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
